# matchtigs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
src/: bin.rs  clib.rs  implementation.rs  lib.rs
src/implementation/: mod.rs
src/implementation/eulertigs/: mod.rs
src/implementation/greedytigs/: mod.rs
src/implementation/matchtigs/: mod.rs
src/implementation/pathtigs/: mod.rs
