[package]
name = "matchtigs"
version = "1.4.0"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
description = "Different algorithms for computing small and minimum plain text representations of kmer sets."
keywords = ["compression", "plain-text", "kmer", "genome", "bio"]
categories = ["algorithms", "compression", "command-line-utilities", "science"]
readme = "README.md"
documentation = "https://docs.rs/matchtigs"
homepage = "https://github.com/algbio/matchtigs"
repository = "https://github.com/algbio/matchtigs"
edition = "2021"
rust-version = "1.60.0"
license-file = "LICENSE.txt"

[lib]
name = "libmatchtigs"
crate-type = ["dylib"]
path = "src/lib.rs"

[[bin]]
name = "matchtigs"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = true

[dependencies]
genome-graph = {version = "5.0.0", features = ["traitgraph-algo"]}
traitgraph-algo = {version = "5.3.0", features = ["hashbrown_dijkstra_node_weight_array"]}
log = "0.4.14"
simplelog = "0.12.0"
clap = {version = "4.0.17", features = ["derive"]}
itertools = "0.10.3"
atomic-counter = "1.0.1"
disjoint-sets = "0.4.2"
permutation = "0.4.0"
crossbeam = "0.8.1"
hashbrown = "0.12.0"
memory-stats = "1.0.0"
flate2 = { version = "1.0.24" }
