[package]
name = "matchtigs"
version = "2.1.8"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
description = "Different algorithms for computing small and minimum plain text representations of kmer sets."
keywords = ["compression", "plain-text", "kmer", "genome", "bio"]
categories = ["algorithms", "compression", "command-line-utilities", "science"]
readme = "README.md"
documentation = "https://docs.rs/matchtigs"
homepage = "https://github.com/algbio/matchtigs"
repository = "https://github.com/algbio/matchtigs"
edition = "2021"
rust-version = "1.75.0"
license-file = "LICENSE.txt"

[lib]
name = "libmatchtigs"
crate-type = ["rlib", "dylib"]
path = "src/lib.rs"

[[bin]]
name = "matchtigs"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = true

[dependencies]
genome-graph = {version = "9.0.0", features = ["traitgraph-algo"]}
traitgraph-algo = {version = "8.1.0", features = ["hashbrown_dijkstra_node_weight_array"]}
log = "0.4.20"
simplelog = "0.12.0"
clap = {version = "4.5.17", features = ["derive", "cargo"]}
itertools = "0.13.0"
atomic-counter = "1.0.1"
disjoint-sets = "0.4.2"
permutation = "0.4.0"
crossbeam = "0.8.1"
hashbrown = "0.14.0"
memory-stats = "1.0.0"
flate2 = { version = "1.0.33" }
